@@ -29,7 +29,6 @@ my %WriteMakefileArgs = (
     "IO::Compress::Deflate" => 0,
     "IO::Compress::Gzip" => 0,
     "IO::HTML" => 0,
-    "IO::Uncompress::Bunzip2" => "2.021",
     "IO::Uncompress::Inflate" => 0,
     "IO::Uncompress::RawInflate" => 0,
     "LWP::MediaTypes" => 6,
@@ -75,7 +74,6 @@ my %FallbackPrereqs = (
   "IO::Compress::Deflate" => 0,
   "IO::Compress::Gzip" => 0,
   "IO::HTML" => 0,
-  "IO::Uncompress::Bunzip2" => "2.021",
   "IO::Uncompress::Inflate" => 0,
   "IO::Uncompress::RawInflate" => 0,
   "LWP::MediaTypes" => 6,
